--- a/lib.html
+++ b/lib.html
@@ -6,6 +6,9 @@
         <link rel="stylesheet" href="lib.css">
     </head>
     <body>
+        <h1>My Library</h1>
+        <div id="books"></div>
+        <button id=newBookButton>NEW BOOK</button>
         <script src="lib.js"></script>
     </body>
 </html>
