--- a/lib.html
+++ b/lib.html
@@ -15,19 +15,19 @@
             <div class="new-book-form-popup">
                 <form action="" >
 
-                    <h1>Add a book</h1>
+                    <h2>Add a book</h2>
                     <ul class="form-container">
                         
                         <li>
-                            <label for="title">Title:</label>
+                            <label for="title">Title:</label><br>
                             <input type="text" id="title">
                         </li>
                         <li>
-                            <label for="author">Author:</label>
+                            <label for="author">Author:</label><br>
                             <input type="text" id="author">
                         </li>
                         <li>
-                            <label for="pages">Number of pages:</label>
+                            <label for="pages">Number of pages:</label><br>
                             <input type="number" id="pages">
                         </li>
                         <li>
