--- a/lib.html
+++ b/lib.html
@@ -27,7 +27,7 @@
                             <input type="text" id="author">
                         </li>
                         <li>
-                            <label for="pages">Number of pages:</label><br>
+                            <label for="pages">Pages:</label><br>
                             <input type="number" id="pages">
                         </li>
                         <li>
